add break points home about popular

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Sushi</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/tablest_styles.css" media="(min-width: 767px)">
+    <link rel="stylesheet" type="text/css" href="./css/pc_styles.css" media="(min-width: 1150px)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,12 +70,12 @@
                     <h1 class="home__title">
                         Enjoy Delecious
                         <img src="./assets/img/home-sushi-title.png" alt="sushi title">
+                        <br>
                         Sushi Food
                     </h1>
 
-                    <p class="home__description">
-                        Enjoy a good dinner with the best dishes in restaurant an improve
-                        your day
+                    <p class="home__description">Enjoy a good dinner with the best dishes in restaurant an improve
+                        your day.
                     </p>
 
                     <a href="#" class="home__button button">
@@ -102,13 +104,13 @@
                         that passes from generation to generation.
                     </p>
                 </div>
-                <img src="assets/img/about-sushi.png" alt="sushi">
+                <img src="assets/img/about-sushi.png" alt="sushi" class="about__container--img">
             </div>
             <img src="assets/img/leaf-branch-1.png" alt="branch leaves" class="about__branch-leaves">
         </section>
 
         <section class="popular section" id="popular">
-            <span class="section__subtitle">The Best Food</span>
+            <span class="section__subtitle popular__subtitle">The Best Food</span>
             <h2 class="section__title">Popular Dishes</h2>
             <div class="popular__container container grid">
                 <article class="popular__card">
