--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <section class="popular section" id="popular">
             <span class="section__subtitle popular__subtitle">The Best Food</span>
-            <h2 class="section__title">Popular Dishes</h2>
+            <h2 class="section__title popular__title">Popular Dishes</h2>
             <div class="popular__container container grid">
                 <article class="popular__card">
                     <img src="assets/img/popular-onigiri.png" alt="popular onigiri" class="popular__img">
