add animation carga scroll

--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 <a href="#" class="scrollup scrollup-hidden" id="scroll-up">
     <i class="ri-arrow-up-line"></i>
 </a>
+<script src="https://unpkg.com/scrollreveal"></script>
 <script type="text/javascript" src="./js/main.js"></script>
 
 </html>
