feat: add styles responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list grid">
+                <ul class="nav__list grid nav__list__full" id="nav__list">
                     <li class="nav__item">
                         <a href="#home" id="nav_home" class="nav__link">Home</a>
                     </li>
@@ -48,7 +48,7 @@
                 </div>
 
                 <img src="./assets/img/leaf-branch-4.png" alt="leaf image four" class="nav__img-1">
-                <img src="./assets/img/leaf-branch-3.png" alt="leaf image three" class="nav__img-2">
+                <img src="./assets/img/leaf-branch-3.png" alt="leaf image three" id="nav__img-2" class="nav__img-2">
             </div>
 
             <div class="nav__buttons">
@@ -218,7 +218,7 @@
             </p>
         </div>
 
-        <div class="footer__content">
+        <div class="footer__content" id="footer__content__two">
             <div>
                 <h3 class="footer__title">Main Menu</h3>
 
